--- a/style.css
+++ b/style.css
@@ -56,9 +56,9 @@ p {
 
 .hero {
     height: 800px;
-    width: 50%;
+    width: 100%;
     margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
+    background-image: url("images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
 }
